# volter

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  docs.yml
benches/: README.md
crates/volter/: Cargo.toml
crates/volter-cli/: Cargo.toml
crates/volter-cli/src/: main.rs  new.rs
crates/volter-core/: Cargo.toml
crates/volter-core/src/: body.rs  extract.rs  handler.rs  into_response.rs  lib.rs  service.rs  url_params.rs
crates/volter-extract/: Cargo.toml
crates/volter-extract/src/: extension.rs  json.rs  lib.rs  path.rs  query.rs
crates/volter-macros/: Cargo.toml
crates/volter-macros/src/: lib.rs
crates/volter-middleware/: Cargo.toml
crates/volter-middleware/src/: body_limit.rs  catch_panic.rs  compression.rs  concurrency_limit.rs  cors.rs  lib.rs  rate_limit.rs  request_id.rs  timeout.rs  trace.rs
crates/volter-middleware/tests/: body_limit.rs  catch_panic.rs  compression.rs  concurrency_limit.rs  cors.rs  rate_limit.rs  request_id.rs  timeout.rs  trace.rs
crates/volter-router/: Cargo.toml
crates/volter-router/src/: error.rs  lib.rs  method_router.rs  pattern.rs  route.rs  route_attr.rs  router.rs
crates/volter-testing/: Cargo.toml
crates/volter-testing/src/: lib.rs  request.rs  response.rs
crates/volter-testing/tests/: client.rs
crates/volter-ws/: Cargo.toml
crates/volter-ws/src/: lib.rs
crates/volter/benches/: router.rs
crates/volter/src/: lib.rs  server.rs
crates/volter/tests/: derive.rs  route_attr.rs
docs/: README.md  book.toml
docs/adr/: 0001-box-clone-service.md
docs/src/: README.md  SUMMARY.md  contributing.md  faq.md  introduction.md  performance.md  testing.md  websockets.md
docs/src/architecture/: architecture.md
docs/src/cli/: cli.md
docs/src/examples/: index.md
docs/src/extractors/: extension.md  json.md  overview.md  path.md  query.md  state.md
docs/src/getting-started/: first-app.md  installation.md  project-structure.md
docs/src/macros/: derive.md  route-attr.md
docs/src/middleware/: built-in.md  custom.md  overview.md
docs/src/routing/: into-response.md  routing.md
examples/body-limit/: Cargo.toml
examples/body-limit/src/: main.rs
examples/catch-panic/: Cargo.toml
examples/catch-panic/src/: main.rs
examples/compression/: Cargo.toml
examples/compression/src/: main.rs
examples/concurrency-limit/: Cargo.toml
examples/concurrency-limit/src/: main.rs
examples/cors/: Cargo.toml
examples/cors/src/: main.rs
examples/derive-extractors/: Cargo.toml
examples/derive-extractors/src/: main.rs
examples/extensions/: Cargo.toml
examples/extensions/src/: main.rs
examples/hello-world/: Cargo.toml
examples/hello-world/src/: main.rs
examples/json/: Cargo.toml
examples/json/src/: main.rs
examples/merge/: Cargo.toml
examples/merge/src/: main.rs
examples/middleware/: Cargo.toml
examples/middleware/src/: main.rs
examples/multi-extractors/: Cargo.toml
examples/multi-extractors/src/: main.rs
examples/nesting/: Cargo.toml
examples/nesting/src/: main.rs
examples/path-params/: Cargo.toml
examples/path-params/src/: main.rs
examples/query-params/: Cargo.toml
examples/query-params/src/: main.rs
examples/rate-limit/: Cargo.toml
examples/rate-limit/src/: main.rs
examples/request-id/: Cargo.toml
examples/request-id/src/: main.rs
examples/route-macros/: Cargo.toml
examples/route-macros/src/: main.rs
examples/timeout/: Cargo.toml
examples/timeout/src/: main.rs
examples/tracing/: Cargo.toml
examples/tracing/src/: main.rs
examples/websocket/: Cargo.toml
examples/websocket/src/: main.rs
