[workspace]
resolver = "2"
members = [
    "crates/volter",
    "crates/volter-core",
    "crates/volter-router",
    "crates/volter-macros",
    "crates/volter-extract",
    "crates/volter-middleware",
    "crates/volter-ws",
    "crates/volter-testing",
    "crates/volter-cli",
    "examples/hello-world",
    "examples/path-params",
    "examples/query-params",
    "examples/json",
    "examples/extensions",
    "examples/multi-extractors",
    "examples/middleware",
    "examples/tracing",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.79"
license = "MIT OR Apache-2.0"
repository = "https://github.com/aliwert/volter"
authors = ["Ali Mert"]

# Central place for dependency versions/features so every crate in the
# workspace uses `dependency = { workspace = true }` instead of pinning its
# own version. See TOOLS.md for why each of these was chosen.
[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio", "server", "http1", "http2"] }
http = "1"
http-body = "1"
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["trace", "cors", "compression-full", "timeout", "limit"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes = "1"

# Internal workspace crates, referenced by version + path so `cargo publish`
# still works once each crate is ready to ship independently.
volter-core = { version = "0.1.0", path = "crates/volter-core" }
volter-router = { version = "0.1.0", path = "crates/volter-router" }
volter-macros = { version = "0.1.0", path = "crates/volter-macros" }
volter-extract = { version = "0.1.0", path = "crates/volter-extract" }
volter-middleware = { version = "0.1.0", path = "crates/volter-middleware" }
volter-ws = { version = "0.1.0", path = "crates/volter-ws" }
volter-testing = { version = "0.1.0", path = "crates/volter-testing" }

[profile.release]
lto = "thin"
codegen-units = 1
