[package]
name = "volter-cli"
description = "CLI tool for scaffolding and developing volter web applications."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/volter-cli/latest/volter_cli"
categories.workspace = true
keywords = ["web", "cli", "scaffolding", "dev-server", "volter"]
readme = "../../README.md"

[[bin]]
name = "volter"
path = "src/main.rs"

[dependencies]
# The CLI is the one place `anyhow` is allowed (see RULES.md #4) — it's a
# binary, not a published library API.
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tokio = { workspace = true }
