[package]
name = "volter-macros"
description = "Derive and attribute macros for volter (FromRequestParts, FromRequest, and later, route attributes)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
