[package]
name = "volter-middleware"
description = "Built-in tower::Layer middleware for volter: tracing, timeout, CORS, catch_panic, request limits."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
volter-core = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
volter-router = { workspace = true }
