[package]
name = "volter-middleware"
description = "Built-in tower::Layer middleware for volter: tracing, timeout, CORS, catch_panic, request limits."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tokio = { workspace = true }
volter-core = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
futures-util = { version = "0.3", default-features = false, features = ["std"] }
ulid = { workspace = true }

[dev-dependencies]
volter-router = { workspace = true }
volter-extract = { workspace = true }
