[package]
name = "volter-middleware"
description = "Built-in middleware layers for the volter web framework: tracing, timeout, CORS, compression, rate-limiting, and more."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/volter-middleware/latest/volter_middleware"
categories.workspace = true
keywords = ["web", "http", "middleware", "tower", "cors"]
readme = "../../README.md"

[dependencies]
tokio = { workspace = true }
volter-core = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
futures-util = { version = "0.3", default-features = false, features = ["std"] }
ulid = { workspace = true }

[dev-dependencies]
volter-router = { workspace = true }
volter-extract = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
flate2 = "1"
