[package]
name = "volter-testing"
description = "In-process test client for integration-testing volter applications without binding a real socket."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/volter-testing/latest/volter_testing"
categories.workspace = true
keywords = ["web", "testing", "test", "http", "integration-testing"]
readme = "../../README.md"

[dependencies]
volter-core = { workspace = true }
volter-router = { workspace = true }
http = { workspace = true }
http-body = { workspace = true }
http-body-util = { workspace = true }
tower = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }

[dev-dependencies]
volter-middleware = { workspace = true }
volter-extract = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
