[package]
name = "volter-ws"
description = "WebSocket upgrade extractor and connection handling for volter."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
volter-core = { workspace = true }
http = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = "0.24"
hyper = { workspace = true }
futures-util = "0.3"
