[package]
name = "volter"
description = "A production-grade, async-first web framework for Rust, built on hyper, tokio, and tower."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/volter/latest/volter"
categories.workspace = true
keywords = ["web", "framework", "http", "async", "router"]
readme = "../../README.md"

[package.metadata.docs.rs]
all-features = true

[dependencies]
volter-core = { workspace = true }
volter-router = { workspace = true }
volter-extract = { workspace = true }
volter-middleware = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
http-body = { workspace = true }
bytes = { workspace = true }

[dependencies.volter-macros]
workspace = true
optional = true

[dependencies.volter-ws]
workspace = true
optional = true

[dev-dependencies]
serde = { workspace = true }
criterion = { workspace = true }
volter-testing = { workspace = true }

[[bench]]
name = "router"
harness = false

[features]
default = ["macros"]
macros = ["dep:volter-macros"]
ws = ["dep:volter-ws"]
