[package]
name = "extensions-example"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
volter = { path = "../../crates/volter" }
serde = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
http-body = { workspace = true }
bytes = { workspace = true }
