[package]
name = "websocket"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
volter = { path = "../../crates/volter", features = ["ws"] }
hyper = { workspace = true }
hyper-util = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
http-body = { workspace = true }
bytes = { workspace = true }
